--- a/teaching.html
+++ b/teaching.html
@@ -78,7 +78,7 @@
             <section id="services" class="services">
             <h2>Conference Tutorials</h2>
             <ul>
-                  <li> <a href="https://mecom2024.ieee-mecom.org/"> Edge Intelligence - Enabler for the Next Generation IoT Networks </a> in IEEE Middle East Conference on Communications and Networking, Abu Dhabi, United Arab Emirates. November 17-20, 2024. <a class="video" href="" target="_blank">  <b>[accepted]</b> </a> </li>
+<!--                  <li> <a href="https://mecom2024.ieee-mecom.org/"> Edge Intelligence - Enabler for the Next Generation IoT Networks </a> in IEEE Middle East Conference on Communications and Networking, Abu Dhabi, United Arab Emirates. November 17-20, 2024. <a class="video" href="" target="_blank">  <b>[accepted]</b> </a> </li>-->
 
                   <li> <a href="https://www.isncc-conf.org/home"> Mobile Edge Computing for Massive IoT (MIoT) Systems</a> in 10th IEEE International Symposium on Networks, Computers, and Communications, Doha, Qatar. October 23-26, 2023. <a class="video" href="/files/tutorials/tutorials_isncc2023.pdf" target="_blank">  <b>[slides]</b> </a> </li>
             </ul>
