--- a/misc.html
+++ b/misc.html
@@ -119,7 +119,7 @@
             
             <div class="photo-item">
             <img src="img/photos/ISNCC_2023.jpg" alt="">
-            <p>IEEE ISNCC 2023, Doha, Qatar</p>
+            <p>IEEE ISNCC 2023, Doha, Qatar.</p>
             </div>
                 
             <div class="photo-item">
