--- a/misc.html
+++ b/misc.html
@@ -138,7 +138,7 @@
             </div>
                 
             <div class="photo-item">
-            <img style="object-fit: contain;" src="img/photos/CompAuto_2022.jpg" alt="">
+            <img src="img/photos/CompAuto_2022.jpg" alt="">
             <p>CompAuto 2023, (Online).</p>
             </div>
                 
