--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         
         <div class="news-container">
         <section id="news" class="news">
-            <h2 style="color: #0056b3; letter-spacing: 2px;  border-bottom: 3px solid #0056b3; ">News</h2>
+            <h2 style="color: #0056b3; letter-spacing: 2px;">News</h2>
             <p><span class="news-date">[Oct 2024]</span> Invited to serve as TPC member at IEEE ICC 2025.</p>
             <p><span class="news-date">[Jun 2024]</span> Joined as Associate Editor of IEEE Transactions on Consumer Electronics (TCE).</p>
             <p><span class="news-date">[Jun 2024]</span> Joined as Associate Editor of IEEE Transactions on Technology and Society.</p>
