--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
             <li><a href="index.html">About</a></li>
             <li><a href="research.html">Research</a></li>
             <li><a href="teaching.html">Teaching</a></li>
-            <li><a href="">Publications</a></li>
+            <li><a href="" class="active">Publications</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="misc.html">Misc</a></li>
         </ul>
@@ -43,7 +43,14 @@
     <section id="publications" class="publications">
     <h2>Journal Papers</h2>
     <ol class="journal-list">
-        <li> 
+        
+<!--
+        <li style="font-family: Arial, sans-serif; font-size: 1.0em; line-height: 1.6; margin-bottom: 10px;">
+        <b><a href="" style="color: #007acc; text-decoration: underline; text-decoration-thickness: 2px; 
+                  text-underline-offset: 3px; transition: text-decoration-style 0.3s ease, color 0.3s ease;">
+            Accelerating Learning with Fixed Time Budget </a> </b>, M. A. Khan, H. Menouar, and R. Hamila, <i>Neural Computing and Applications</i>, 2024 [In Press].</li><li> 
+-->
+      <li>  
         <b>M. A. Khan</b>, H. Menouar and R. Hamila, <a href="">Accelerating Learning with Fixed Time Budget</a>, Neural Computing and Applications, 2024 [In Press].  
     </li>
     
