--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         
         <ul>
-            <li><a href="">About</a></li>
+            <li><a href="" class="active">About</a></li>
             <li><a href="research.html">Research</a></li>
             <li><a href="teaching.html">Teaching</a></li>
             <li><a href="publications.html">Publications</a></li>
