--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
         
         <ul>
             <li><a href="index.html">About</a></li>
-            <li><a href="">Research</a></li>
+            <li><a href="" class="active">Research</a></li>
             <li><a href="teaching.html">Teaching</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="services.html">Services</a></li>
