--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
             <li><a href="research.html">Research</a></li>
             <li><a href="teaching.html">Teaching</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <li><a href="">Services</a></li>
+            <li><a href="" class="active">Services</a></li>
             <li><a href="misc.html">Misc</a></li>
         </ul>
     </nav>
