--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
         <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="research.html">Research</a></li>
-            <li><a href="">Teaching</a></li>
+            <li><a href="" class="active">Teaching</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="misc.html">Misc</a></li>
