--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         <div class="container">
         <section id="bio" class="bio">
         <div class="bio-header">
-        <img src="img/khan.PNG" alt="MAK" class="profile-img">
+<!--        <img src="img/khan.PNG" alt="MAK" class="profile-img">-->
+        <div class="profile-img"></div>
         <div class="bio-info">
             <h1>Muhammad Asif Khan</h1>
             <h2>Research Scientist</h2>
@@ -98,10 +99,10 @@
             <p>PO Box. 210531, Qatar Science and Technology Park, Doha, Qatar.</p>
             <p> </p>
             
-            <p>Email: <a style="letter-spacing: 3px;" href="mailto:asifk@ieee.org">asifk@ieee.org</a></p>
+            <p>Email: <a style="letter-spacing: 3px;" href="mailto:asifk@ieee.org">asifk@ieee.org</a>  &nbsp <a style="letter-spacing: 3px;" href="mailto:muasifkn@gmail.com">muasifkn@gmail.com</a></p>
             
             <ul class="social-icons">
-                <li><a href="files/cv.pdf" download> CV </> </a> / </li>
+                <li><a href="files/cv.pdf" download> CV </a> / </li>
                 <li><a href="https://twitter.com/muasifk" target="_blank"><i class="fab fa-x-twitter fa-xs" ></i></a> / </li>
                 <li><a href="https://www.linkedin.com/in/muasifk/" target="_blank"><i class="fab fa-linkedin fa-xs"></i></a> / </li>
                 <li><a href="https://github.com/muasifk/" target="_blank"><i class="fab fa-github fa-xs"></i></a> / </li>
@@ -120,9 +121,9 @@
         <p style="line-height: 1.5;">Muhammad Asif Khan (SMIEEE) is a <b>Research Scientist</b> at Qatar Mobility Innovations Center (QMIC), Doha, Qatar. He received a <b>Ph.D. degree in electrical engineering</b> from Qatar University (2020), an M.Sc. degree in telecommunication engineering from the University of Engineering and Technology Taxila, Pakistan (2013), and a B.Sc. degree in telecommunication engineering from the University of Engineering and Technology Peshawar, Pakistan (2009). He was awarded the Postdoctoral Research Award (PDRA) from the Qatar National Research Fund (QNRF), for his research work as a Postdoctoral Research Fellow at Qatar University, Doha, Qatar. He was a Research Mentor at the Qatar University Young Scientists Center (QUYSC). He published over 40 peer reviewed articles including two book chapters. Dr. Khan is a member of IET and a Chartered Engineer (CEng) with the Engineering Council (UK). He is an associate editor of IEEE Transactions on Consumer Electronics (TCE), IEEE Transactions on Technology and Society (TTS), and IEEE Future Directions Technology Policy and Ethics Newsletter. He serves on several IEEE committees including the TCCC, TCPAMI, MDA-TC, MMTC, IOT, and Sensors Council. He also served as a TPC member of numerous IEEE conferences including ICC, Globecom, CCNC, VTC, ICCE, BigData, Sensors, GEM, etc.</p>
         <p>He is currently serving as:</p>
             <ul class="custom-list">
-            <li><b>Associate Editor</b> at IEEE Transactions on Consumer Electronics (TCE)</li>
-            <li><b>Associate Editor</b> at IEEE Transactions on Technology and Society</li>
-            <li><b>Associate Editor</b> at IEEE Future Directions Technology Policy and Ethics Newsletter</li>
+            <li>Associate Editor at <a href="https://ctsoc.ieee.org/publications/ieee-transactions-on-consumer-electronics.html" target="_blank">IEEE Transactions on Consumer Electronics (TCE) <i class="fa fa-external-link"></i></a> </li>
+                <li>Associate Editor at <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8566059" target="_blank"a>>IEEE Transactions on Technology and Society (TTS) <i class="fa fa-external-link"></i> </a> </li>
+            <li>Associate Editor at <a href="https://cmte.ieee.org/futuredirections/tech-policy-ethics/" target="_blank">IEEE Future Directions Technology Policy and Ethics Newsletter <i class="fa fa-external-link"></i></a></li>
             </ul>
         </section>         
         </div>
