--- a/services.html
+++ b/services.html
@@ -126,10 +126,11 @@
                   <li> IEEE Global Communications Conference (GLOBECOM) 2024 </li>
                   <li> IEEE Vehicular Technology Conference (VTC2023-Fall) </li>
                   <li> IEEE Consumer Communications and Networking Conference (CNCC 2021-2025) </li>
-                  <li> International Conference on Consumer Electronics (ICCE Berlin 2023)</li>
+                  <li> IEEE International Conference on Consumer Electronics (ICCE Berlin 2023)</li>
                   <li> Asia Conference on Computer Vision, Image Processing, and Pattern Recognition (CVIPPR’24)</li>
                   <li> IEEE BigData 2020</li>
-                  <li> IEEE International Conference on Acoustics, Speech & Signal Processing (ICASSP 2020)</li>
+                  <li> IEEE International Conference on Acoustics, Speech & Signal Processing (ICASSP 2020, 25)</li>
+                  <li> IEEE IEEE International Workshop on Communication and Networking for Swarms Robotics (ROBOCOM 2024) </li>
                   <li> IEEE Sensors 2020 </li>
                   <li> IEEE Conference on Technologies for Sustainability (SusTech 2020-2024)</li>
                   <li> IEEE International Wireless Communications and Mobile Computing Conference (IWCMC 2023)</li>
