--- a/teaching.html
+++ b/teaching.html
@@ -44,8 +44,10 @@
             <section id="services" class="services">
             <h2>Courses Taught</h2>
             <ul>
-              <li> STAT-819 Advance Machine Learning (3 Cr. Hrs) - <a href="https://awkum.edu.pk/" target="_blank"> Abdul Wali Khan University, Mardan, Pakistan </a> </li>    
-              <li> STAT-836 Advanced Techniques and Logical Reasoning (3 Cr. Hrs) - <a href="https://awkum.edu.pk/"> Abdul Wali Khan University, Mardan, Pakistan</a></li>    
+              <li> STAT-819 Advance Machine Learning (3 Cr. Hrs) - <a href="https://awkum.edu.pk/" target="_blank"> 
+                  Abdul Wali Khan University, Mardan, Pakistan <i class="fa fa-external-link"></i> </a> </li>    
+              <li> STAT-836 Advanced Techniques and Logical Reasoning (3 Cr. Hrs) - <a href="https://awkum.edu.pk/" target="_blank"> 
+                  Abdul Wali Khan University, Mardan, Pakistan <i class="fa fa-external-link"></i></a></li>    
             </ul>
             </section>
             </div>
