--- a/publications.html
+++ b/publications.html
@@ -57,6 +57,8 @@
     <li> 
         <b>M. A. Khan</b>, H. Menouar and R. Hamila, <a href="">Crowd Counting at the Edge using Weighted Knowledge Distillation</a>, Nature Scientific Reports, 2024. [Submitted].  
     </li>
+        
+        <li> <b>M. A. Khan</b> and L. Hamad, <a href=""> On the Capability of LLMs in Combinatorial Optimization</a>, Annals of Mathematics and Artificial Intelligence (Submitted)</li>
       
     <li>
     M. Almehdhar, A. Albaseer, <b>M. A. Khan</b>, M. Abdallah, H. Menouar, S. Al-Kuwari, and A. Al-Fuqaha, <a href="https://ieeexplore.ieee.org/abstract/document/10582439/">Deep Learning in the Fast Lane: A Survey on Advanced Intrusion Detection Systems for Intelligent Vehicle Networks</a>, in IEEE Open Journal of Vehicular Technology, vol. 5, pp. 869-906, 2024.  
