--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
         <div class="news-container">
         <section id="news" class="news">
             <h2 style="color: #0056b3; letter-spacing: 2px;">News</h2>
+            <p><span class="news-date">[Dec 2024]</span> New <a href="https://ieeexplore.ieee.org/document/10777298", target="_blank">Article</a> published in IEEE Transactions on Intelligent Vehicles.</p>
             <p><span class="news-date">[Oct 2024]</span> Invited to serve as TPC member at IEEE ICC 2025.</p>
             <p><span class="news-date">[Jun 2024]</span> Joined as Associate Editor of IEEE Transactions on Consumer Electronics (TCE).</p>
             <p><span class="news-date">[Jun 2024]</span> Joined as Associate Editor of IEEE Transactions on Technology and Society.</p>
