--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
         <p>
-            I am a Research Scientist at <a href="www.qmic.com" target="_blank">Qatar Mobility Innovations Center (QMIC)</a>, Doha, Qatar. I was a postdoctoral research fellow at Qatar University. I received a Ph.D. degree in electrical engineering from Qatar University (2020), an M.Sc. degree in telecommunication engineering from the University of Engineering and Technology Taxila, Pakistan (2013), and a B.Sc. degree in telecommunication engineering from the University of Engineering and Technology Peshawar, Pakistan (2009). <br>
+            I am a Research Scientist at <a href="https://www.qmic.com" target="_blank">Qatar Mobility Innovations Center (QMIC)</a>, Doha, Qatar. I was a postdoctoral research fellow at Qatar University. I received a Ph.D. degree in electrical engineering from Qatar University (2020), an M.Sc. degree in telecommunication engineering from the University of Engineering and Technology Taxila, Pakistan (2013), and a B.Sc. degree in telecommunication engineering from the University of Engineering and Technology Peshawar, Pakistan (2009). <br>
             I am the recepient of the <strong>Postdoctoral Research Award (PDRA)</strong> from the <a href="https://qrdi.org.qa/en-us/Scientific-Research" target="_blank">Qatar National Research Fund (QNRF)</a> in 2022. I have published over 50 peer reviewed articles and book chapters. I am a senior member of IEEE, a member of IET, and a Chartered Engineer (CEng) with the Engineering Council (UK). <br>
             I am an <strong>Associate Editor</strong> of IEEE Transactions on Consumer Electronics (TCE), IEEE Transactions on Technology and Society (TTS), and IEEE Future Directions Technology Policy and Ethics Newsletter.
             </p>
