--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         
         <div class="container1">
         <div class="profile-banner">
-        <img src="img/photos/CCNC_2023.JPG" alt="profile-banner">
+        <img src="img/photos/NZ_2023.jpg" alt="profile-banner">
         <div class="caption"> IEEE CCNC 2023, Las Vegas, USA </div>
         </div>
 
