--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="container1">
         <div class="profile-banner">
         <img src="img/photos/NZ_2023.jpg" alt="profile-banner">
-        <div class="caption"> IEEE CCNC 2023, Las Vegas, USA </div>
+        <div class="caption"> Rotorua (North Island), New Zealand </div>
         </div>
 
          
