--- a/index.html
+++ b/index.html
@@ -452,13 +452,13 @@
             <h3>Journal Reviewer</h3>
             <ul>
                 <li>
-                    <strong>IEEE Transactions:</strong> TAI, TVT, T-ITS, TNNLS, TETC, SMC, TCE, TSCVT, TMTT, TDSC
+                    <strong>IEEE Transactions:</strong> TAI, TNNLS, TMLCN, TMC, TVT, T-ITS, TETC, SMC, TCE, TCSVT, TMTT, TDSC, TII
                 </li>
                 <li> 
-                   <strong>IEEE Journals:</strong> COMST, COMMAG, COMSTD, OJCOMS, OJVT, WCM, IOT, IOTMAG, NL, ISJ, Sensors, SENL, Access
+                   <strong>IEEE Journals:</strong> COMST, COMMAG, COMSTD, OJCOMS, OJVT, WCM, WCL, IOT, IOTMAG, NL, ISJ, Sensors, SENL, Access
                 </li>
                 <li>
-                <strong>Other Journals:</strong> Nature Scientific Reports
+                <strong>Other Journals:</strong> Nature Scientific Reports, IJCV, ACM Computing Surveys, FGCS, IET Communications, IET Image Processing, 
                 </li>
                 <p>View my verified reviews on <a href="https://www.webofscience.com/wos/author/record/G-2629-2013" target="_blank">Web of Science <i class="fa fa-external-link"></i></a>. </p>
             </ul>
