--- a/index.html
+++ b/index.html
@@ -437,9 +437,10 @@
                 <li> <strong>TPC Co-chair</strong> - <a href="https://icftss.org/" target="_blank">IEEE ICFTSS</a> 2024, <a href="https://www.icca.net/" target="_blank">CompAuto</a> 2023-2024, CRET 2024 </li>
                 <li> <strong>Tutorial Chair</strong> - <a href="https://ieeegem.org/">IEEE GEM</a> 2023</li>
                 <li> <strong>Workshop Co-Chair</strong> - 6GIoTT 2022</li>
+                <li> <strong>Area Chair</strong> - IJCNN 2025</li>
                 <li> <strong>PC Member (ML/AI)</strong> - 
                     NeurIPS 2024, 
-                    IJCNN 2025, 
+<!--                    IJCNN 2025, -->
                     IEEE BigData 2020,
                     CVIPPR 2024
                 </li>
