--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <p>
             I am a Research Scientist at <a href="https://www.qmic.com" target="_blank">Qatar Mobility Innovations Center (QMIC)</a>, Doha, Qatar. I was a postdoctoral research fellow at Qatar University. I received a Ph.D. degree in electrical engineering from Qatar University (2020), an M.Sc. degree in telecommunication engineering from the University of Engineering and Technology Taxila, Pakistan (2013), and a B.Sc. degree in telecommunication engineering from the University of Engineering and Technology Peshawar, Pakistan (2009). <br>
             I am the recipient of the <strong>Postdoctoral Research Award (PDRA)</strong> from the <a href="https://qrdi.org.qa/en-us/Scientific-Research" target="_blank">Qatar National Research Fund (QNRF)</a> in 2022. I have published over 50 peer reviewed articles and book chapters. I am a senior member of IEEE, a member of IET, and a Chartered Engineer (CEng) with the Engineering Council (UK). <br>
-            I am an <strong>Associate Editor</strong> of IEEE Transactions on Consumer Electronics (TCE), IEEE Transactions on Technology and Society (TTS), and IEEE Future Directions Technology Policy and Ethics Newsletter.
+            I am an <strong>Associate Editor</strong> of IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Consumer Electronics (TCE), IEEE Transactions on Technology and Society (TTS), and IEEE Future Directions Technology Policy and Ethics Newsletter.
             </p>
             
         <ul class="social-icons">
@@ -433,6 +433,7 @@
             
             <h3>Journal Editorial Committee</h3>
             <ul>
+                <li> <strong>Associate Editor</strong>, IEEE Transactions on Neural Networks and Learning Systems (Jan 2025-Present)</li>
                 <li> <strong>Associate Editor</strong>, IEEE Transactions on Consumer Electronics (July 2024 - June 2026) </li>
                 <li> <strong>Associate Editor</strong>, IEEE Transactions on Technology and Society (May 2024 - May 2026)</li>
                 <li> <strong>Associate Editor</strong>, IEEE Future Directions Newsletter (Apr 2021 - Present) </li>
@@ -499,6 +500,7 @@
         <div class="news-container">
         <section id="news" class="news">
             <h1 style="color: #eee;"> News &#128227;</h1>
+            <p>[<span class="news-date">Jan 2025</span>] Joined as Associate Editor of IEEE Transactions on Neural Networks and Learning Systems (TNNLS).</p>
             <p>[<span class="news-date">Jan 2025</span>] Invited as Area Chair (AC) in <a href="https://2025.ijcnn.org/", target="_blank">IJCNN 2025 </a>.</p>
             <p>[<span class="news-date">Jan 2025</span>] Invited as Keynote Speaker in <a href="https://www.ic-vprd.org/", target="_blank">ICVPRD 2025 </a>.</p>
             <p>[<span class="news-date">Dec 2024</span>] Invited as Keynote Speaker in <a href="", target="_blank">ASGI 2025 </a>.</p>
