--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
     <meta name="google-site-verification" content="W57u9rFdHKBWLoG09oHsWW70MqqzIYgtYMP98YH90ys" />
     
-    <title>M. A. Khan &#8211 Computer Scientist</title>
+    <title>Muhammad Asif Khan &#8211 Computer Scientist</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
