--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
 
             <li>
-                <a href="https://arxiv.org/pdf/2111.13879" target="_blank">ML-based Handover Prediction and AP Selection in Cognitive Wi-Fi Networks</a> <br>
+                <a href="https://arxiv.org/pdf/2111.13879" target="_blank"> <b>ML-based Handover Prediction and AP Selection in Cognitive Wi-Fi Networks</b></a> <br>
                 <strong>M. A. Khan</strong>, R. Hamila, A. Gastli, S. Kiranyaz, and N. A. Al-Emadi, <br>
                 Journal of Network and Systems Management, 2022
             </li>
