--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <!-- ++++++++++++++++++++++  News and Updates  +++++++++++++++++++++++++++++++      -->
         
         <div class="container2">
-        <section id="awards" class="awards">
+        <section id="news" class="news">
             <h1>News and Updates &#128227; </h1>
             <ul class="custom-list">
             
