--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </p>
             
         <ul class="social-icons">
-                <li><a href="files/cv.pdf" target="_blank"> CV </a> / </li>
+                <li><a href="files/CV_MAK.pdf" target="_blank"> CV </a> / </li>
                 <li><a href="https://twitter.com/muasifk" target="_blank"><i class="fab fa-x-twitter fa-xs" ></i></a> / </li>
                 <li><a href="https://www.linkedin.com/in/muasifk/" target="_blank"><i class="fab fa-linkedin fa-xs"></i></a> / </li>
                 <li><a href="https://github.com/muasifk/" target="_blank"><i class="fab fa-github fa-xs"></i></a> / </li>
