--- a/index.html
+++ b/index.html
@@ -645,8 +645,8 @@
         <section id="videos" class="videos">
 
         
-        <h1 style="color:#eee"> Videos </h1> 
-        <p style="color: white">Keynotes, Invited Talks, and Conference Presentations</p>
+        <h1 style="color:#eee"> Keynotes, Talks, and Presentations </h1> 
+        <p style="color: white; text-align: center">(Arranged in playlists)</p>
         <div class="video-container">
           
         <!-- A playlist   -->
