new paper published

--- a/index.html
+++ b/index.html
@@ -409,13 +409,13 @@
             <ul>
             
             <li>
-             <a href="https://ieeexplore.ieee.org/document/10777298" target="_blank"> <b>LLM-Driven Real-Time Threat Prediction and Response for Internet of Energy (IoE)</b> </a> <br>
+             <a href="" target="_blank"> <b>LLM-Driven Real-Time Threat Prediction and Response for Internet of Energy (IoE)</b> </a> <br>
                 <strong>M. A. Khan</strong>, <br>
                 IEEE Network, 2025.    
             </li>
                 
             <li>
-             <a href="https://ieeexplore.ieee.org/document/10777298" target="_blank"> <b>Crowd counting at the edge using weighted knowledge distillation</b> </a> <br>
+             <a href="https://www.nature.com/articles/s41598-025-90750-5" target="_blank"> <b>Crowd counting at the edge using weighted knowledge distillation</b> </a> <br>
                 <strong>M. A. Khan</strong>, H. Menouar, R. Hamila, and A. Abu-Dayya, <br>
                 Scientific Reports, 15, 11932, 2025.    
             </li>
