--- a/portfolio.html
+++ b/portfolio.html
@@ -397,7 +397,7 @@
   <!--  New Project  -->
     <div class="slide">
       <div class="content-wrapper">
-        <div class="project-image"> <img src="portfolio/queue.jpg" alt="Description of the image"> </img> </div>
+        <div class="project-image"> <img src="portfolio/queue1.jpg" alt="Description of the image"> </img> </div>
         <div class="project-info">
           <div class="project-number">Project 03</div>
           <h1>Smart Cities</h1>
