--- a/portfolio.html
+++ b/portfolio.html
@@ -397,16 +397,16 @@
   <!--  New Project  -->
     <div class="slide">
       <div class="content-wrapper">
-        <div class="project-image"> <img src="portfolio/queue1.jpg" alt="Description of the image"> </img> </div>
+        <div class="project-image"> <img src="portfolio/qm.gif" alt="Description of the image"> </img> </div>
         <div class="project-info">
           <div class="project-number">Project 03</div>
-          <h1>Smart Cities</h1>
-          <p>Vehicles queue monitoring in busy intersections.</p>
+          <h1>National Museum</h1>
+          <p>Visitors monitoring and analytics for museum artifacts.</p>
           <div class="skills">
             <div class="skill-row">
               <span class="skill-tag">Vision</span>
               <span class="skill-tag">YOLO (Enhanced)</span>
-              <span class="skill-tag">Augmentation</span>
+<!--              <span class="skill-tag">Augmentation</span>-->
             </div>
 <!--
             <div class="skill-row">
