--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             
             <li>
              <a href="https://ieeexplore.ieee.org/document/11195876" target="_blank"> <b>Trust and Privacy in Commercial and Recreational Drone Navigation</b> </a> <br>
-                <strong>M. A. Khan and H. Menouar</strong>, <br>
+                <strong>M. A. Khan</strong> and H. Menouar, <br>
                 IEEE Transactions on Technology and Society, 2025.    
             </li>
                 
